# otel-bootstrap

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  SPEC.md  collector-config.yaml  docker-compose.yml
.cargo/: config.toml
.cds/workflows/: main.yml
.gitea/workflows/: ci.yml  release.yml
.gitea/workflows.disabled/: ci.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  tag.yml
examples/: axum_org_context.rs  axum_span_enricher.rs  basic_setup.rs  custom_config.rs  shutdown_handling.rs  telemetry_profiling.rs
src/: axum_middleware.rs  grpc_middleware.rs  lib.rs  log_bridge.rs  profiling.rs  span_enrichment.rs  testing.rs
tests/: axum_middleware.rs  builder.rs  collector_profiles_config.rs  e2e.rs  profiling_feature.rs  propagation.rs  span_enrichment.rs  subscriber_clobber.rs  testing.rs
