[package]
name = "otel-bootstrap"
version = "0.2.2"
edition = "2024"
description = "One-call OpenTelemetry bootstrap — traces + metrics with OTLP export"
license = "LicenseRef-Proprietary"
repository = "https://git.brefwiz.com/open/otel-bootstrap"
publish = ["brefwiz"]

[features]
default = ["grpc"]
grpc = ["opentelemetry-otlp/grpc-tonic"]
http = ["opentelemetry-otlp/http-proto", "opentelemetry-otlp/reqwest-client"]
integration-tests = []
testing = ["opentelemetry_sdk/testing"]
axum = ["dep:axum", "dep:tower"]

[dependencies]
opentelemetry = { version = "0.31", features = ["metrics", "logs"] }
opentelemetry_sdk = { version = "0.31", features = ["metrics", "logs", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["metrics", "logs"] }
opentelemetry-appender-tracing = "0.31"
tracing-opentelemetry = "0.30"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing = "0.1"
opentelemetry-semantic-conventions = { version = "0.31", features = ["semconv_experimental"] }
hostname = "0.4"
axum = { version = "=0.8", optional = true }
tower = { version = "0.5", optional = true }

[[example]]
name = "basic_setup"
required-features = ["grpc"]

[[example]]
name = "shutdown_handling"
required-features = ["grpc"]

[[example]]
name = "custom_config"
required-features = ["grpc"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1"
opentelemetry = { version = "0.31", features = ["trace"] }
tracing = "0.1"
