[package]
name = "otel-bootstrap"
version = "0.4.0"
edition = "2024"
authors = ["Gregoire Salingue"]
description = "One-call OpenTelemetry bootstrap — traces + metrics with OTLP export"
license = "MIT"
repository = "https://github.com/brefwiz/otel-bootstrap"
homepage = "https://github.com/brefwiz/otel-bootstrap"
documentation = "https://docs.rs/otel-bootstrap"
readme = "README.md"
keywords = ["opentelemetry", "otlp", "tracing", "observability", "axum"]
categories = ["development-tools::debugging", "development-tools::profiling"]
rust-version = "1.85"

[features]
default = ["grpc"]
grpc = ["opentelemetry-otlp/grpc-tonic"]
http = ["opentelemetry-otlp/http-proto", "opentelemetry-otlp/reqwest-client"]
integration-tests = []
testing = ["opentelemetry_sdk/testing"]
axum = ["dep:axum", "dep:tower"]
org-context = ["dep:api-bones"]

[dependencies]
opentelemetry = { version = "0.31", features = ["metrics", "logs"] }
opentelemetry_sdk = { version = "0.31", features = ["metrics", "logs", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["metrics", "logs"] }
opentelemetry-appender-tracing = "0.31"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing = "0.1"
opentelemetry-semantic-conventions = { version = "0.31", features = ["semconv_experimental"] }
hostname = "0.4"
axum = { version = "=0.8", optional = true }
tower = { version = "0.5", optional = true }
api-bones = { version = "4.5.0", default-features = false, features = ["std", "uuid"], optional = true }

[[example]]
name = "basic_setup"
required-features = ["grpc"]

[[example]]
name = "shutdown_handling"
required-features = ["grpc"]

[[example]]
name = "custom_config"
required-features = ["grpc"]

[[example]]
name = "axum_org_context"
required-features = ["grpc", "axum", "org-context"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1"
opentelemetry = { version = "0.31", features = ["trace"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
api-bones = { version = "4.5.0", default-features = false, features = ["std", "uuid"] }
api-bones-test = { version = "4.5.0", default-features = false, features = ["builders"] }
