[package]
name = "otel-bootstrap"
version = "2.1.0"
edition = "2024"
authors = ["Gregoire Salingue"]
description = "One-call OpenTelemetry bootstrap — traces + metrics with OTLP export"
license = "MIT"
repository = "https://github.com/brefwiz/otel-bootstrap"
homepage = "https://github.com/brefwiz/otel-bootstrap"
readme = "README.md"
keywords = ["opentelemetry", "otlp", "tracing", "observability", "axum"]
categories = ["development-tools::debugging", "development-tools::profiling"]
rust-version = "1.85"
publish = ["crates-io"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["grpc"]
grpc = ["opentelemetry-otlp/grpc-tonic"]
# mTLS for the gRPC transport. Implies grpc; pulls in tonic with TLS support.
# Callers supply PEM material via TelemetryBuilder::with_mtls(MtlsMaterial).
# v1: cert/key are read ONCE at init — pod must restart on SVID rotation.
# (Rotation watcher is a follow-up; not blocking initial mTLS rollout.)
grpc-mtls = ["grpc", "dep:tonic", "opentelemetry-otlp/tls", "opentelemetry-otlp/tls-roots"]
http = ["opentelemetry-otlp/http-proto", "opentelemetry-otlp/reqwest-client"]
integration-tests = []
testing = ["opentelemetry_sdk/testing"]
axum = ["dep:axum", "dep:tower"]

[dependencies]
opentelemetry = { version = "0.31", features = ["metrics", "logs"] }
opentelemetry_sdk = { version = "0.32", features = ["metrics", "logs", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["metrics", "logs"] }
opentelemetry-appender-tracing = "0.31"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing = "0.1"
opentelemetry-semantic-conventions = { version = "0.31", features = ["semconv_experimental"] }
hostname = "0.4"
axum = { version = "=0.8", optional = true }
tower = { version = "0.5", optional = true }
# Only used for ClientTlsConfig under grpc-mtls. tls-roots gives a default
# webpki trust root; we override per-call with our own ca_certificate.
tonic = { version = "0.14", features = ["tls-native-roots"], optional = true }

[[example]]
name = "basic_setup"
required-features = ["grpc"]

[[example]]
name = "shutdown_handling"
required-features = ["grpc"]

[[example]]
name = "custom_config"
required-features = ["grpc"]

[[example]]
name = "axum_span_enricher"
required-features = ["grpc", "axum"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1"
opentelemetry = { version = "0.31", features = ["trace"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
